--- a/style.css
+++ b/style.css
@@ -1,31 +1,62 @@
-*{
-    box-sizing: border-box;
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(34, 34, 92);
+body {
+    background-color: rgb(28, 27, 27) ;
+    font-family: Arial, sans-serif;
 }
 
-li{
+li {
     list-style: none;
-    margin: 15px;
 }
 
-.nav a{
-    color: white;
-}
-a{
+a {
     text-decoration: none;
     color: white;
 }
 
-.card{
-    background-color: beige;
+.list {
+    list-style: disc;
+    margin: 30px;
+}
+
+.card {
+    background-color:  rgb(8, 147, 8);
     margin: 20px;
     width: 150px;
     padding: 15px 10px;
-    border-radius: 20px;
-    color: black;
+    border-radius: 12px;
 }
+
+.nav-bar ul {
+    background-color: rgb(8, 147, 8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+
+}
+
+h1{
+    color: white;
+    padding: 10px 20px;
+}
+
+h2{
+    color: white;
+    padding: 10px 20px;
+    
+}
+
+.enlaces a{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
