--- a/practica-8/output.css
+++ b/practica-8/output.css
@@ -21,11 +21,14 @@
     --color-sky-950: oklch(29.3% 0.066 243.157);
     --color-blue-400: oklch(70.7% 0.165 254.624);
     --color-blue-500: oklch(62.3% 0.214 259.815);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-800: oklch(42.4% 0.199 265.638);
+    --color-indigo-500: oklch(58.5% 0.233 277.117);
     --color-purple-600: oklch(55.8% 0.288 302.321);
     --color-slate-500: oklch(55.4% 0.046 257.417);
     --color-slate-800: oklch(27.9% 0.041 260.031);
     --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -34,6 +37,7 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --font-weight-extrabold: 800;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
@@ -272,11 +276,26 @@
   .h-\[28px\] {
     height: 28px;
   }
+  .h-\[30px\] {
+    height: 30px;
+  }
   .h-\[40px\] {
     height: 40px;
   }
+  .h-\[60px\] {
+    height: 60px;
+  }
+  .h-\[80px\] {
+    height: 80px;
+  }
   .h-\[350px\] {
     height: 350px;
+  }
+  .h-\[430\] {
+    height: 430;
+  }
+  .h-\[430px\] {
+    height: 430px;
   }
   .h-\[520px\] {
     height: 520px;
@@ -317,32 +336,98 @@
   .w-80 {
     width: calc(var(--spacing) * 80);
   }
+  .w-\[3\] {
+    width: 3;
+  }
+  .w-\[8px\] {
+    width: 8px;
+  }
+  .w-\[12px\] {
+    width: 12px;
+  }
+  .w-\[16px\] {
+    width: 16px;
+  }
+  .w-\[20px\] {
+    width: 20px;
+  }
+  .w-\[30px\] {
+    width: 30px;
+  }
+  .w-\[32px\] {
+    width: 32px;
+  }
+  .w-\[40px\] {
+    width: 40px;
+  }
+  .w-\[50px\] {
+    width: 50px;
+  }
+  .w-\[60px\] {
+    width: 60px;
+  }
+  .w-\[70px\] {
+    width: 70px;
+  }
   .w-\[78px\] {
     width: 78px;
   }
   .w-\[80\%\] {
     width: 80%;
   }
+  .w-\[80px\] {
+    width: 80px;
+  }
   .w-\[85\%\] {
     width: 85%;
+  }
+  .w-\[90px\] {
+    width: 90px;
   }
   .w-\[100\%\] {
     width: 100%;
   }
+  .w-\[100px\] {
+    width: 100px;
+  }
   .w-\[164px\] {
     width: 164px;
+  }
+  .w-\[200px\] {
+    width: 200px;
   }
   .w-\[300px\] {
     width: 300px;
   }
+  .w-\[320\] {
+    width: 320;
+  }
+  .w-\[320px\] {
+    width: 320px;
+  }
   .w-\[330px\] {
     width: 330px;
+  }
+  .w-\[400px\] {
+    width: 400px;
+  }
+  .w-\[500px\] {
+    width: 500px;
+  }
+  .w-\[800px\] {
+    width: 800px;
+  }
+  .w-\[px\] {
+    width: px;
   }
   .min-w-\[288px\] {
     min-width: 288px;
   }
   .border-collapse {
     border-collapse: collapse;
+  }
+  .transform {
+    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .cursor-pointer {
     cursor: pointer;
@@ -359,6 +444,9 @@
   .flex-row {
     flex-direction: row;
   }
+  .flex-row-reverse {
+    flex-direction: row-reverse;
+  }
   .flex-wrap {
     flex-wrap: wrap;
   }
@@ -373,6 +461,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -394,6 +485,12 @@
   }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
+  }
+  .gap-\[20px\] {
+    gap: 20px;
+  }
+  .gap-\[30px\] {
+    gap: 30px;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -446,6 +543,12 @@
   .bg-\[\#1F1F1F\] {
     background-color: #1F1F1F;
   }
+  .bg-\[\#1f3540\] {
+    background-color: #1f3540;
+  }
+  .bg-\[\#31c4be\] {
+    background-color: #31c4be;
+  }
   .bg-\[\#192a32\] {
     background-color: #192a32;
   }
@@ -473,8 +576,17 @@
   .bg-\[\#F2F2F7\] {
     background-color: #F2F2F7;
   }
+  .bg-\[\#\] {
+    background-color: #;
+  }
+  .bg-\[\#a8bec9\] {
+    background-color: #a8bec9;
+  }
   .bg-\[\#ecf2ff\] {
     background-color: #ecf2ff;
+  }
+  .bg-\[\#f2b237\] {
+    background-color: #f2b237;
   }
   .bg-\[\#f2fdf9\] {
     background-color: #f2fdf9;
@@ -487,6 +599,12 @@
   }
   .bg-\[\#fffaf4\] {
     background-color: #fffaf4;
+  }
+  .bg-\[\[\#a8bec9\]\] {
+    background-color: [#a8bec9];
+  }
+  .bg-amber-50 {
+    background-color: var(--color-amber-50);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -557,6 +675,9 @@
   .p-\[20px\] {
     padding: 20px;
   }
+  .p-\[30px\] {
+    padding: 30px;
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
@@ -568,6 +689,9 @@
   }
   .px-14 {
     padding-inline: calc(var(--spacing) * 14);
+  }
+  .px-\[20px\] {
+    padding-inline: 20px;
   }
   .px-\[30px\] {
     padding-inline: 30px;
@@ -590,11 +714,32 @@
   .pt-\[20px\] {
     padding-top: 20px;
   }
+  .pt-\[25px\] {
+    padding-top: 25px;
+  }
+  .pt-\[30px\] {
+    padding-top: 30px;
+  }
+  .pt-\[40px\] {
+    padding-top: 40px;
+  }
+  .pt-\[60px\] {
+    padding-top: 60px;
+  }
   .pt-\[70px\] {
     padding-top: 70px;
   }
+  .pt-\[80px\] {
+    padding-top: 80px;
+  }
   .pt-\[100px\] {
     padding-top: 100px;
+  }
+  .pt-\[px\] {
+    padding-top: px;
+  }
+  .pr-\[10px\] {
+    padding-right: 10px;
   }
   .pb-7 {
     padding-bottom: calc(var(--spacing) * 7);
@@ -621,6 +766,12 @@
   .text-base\/\[190\.4\%\] {
     font-size: var(--text-base);
     line-height: 190.4%;
+  }
+  .text-\[8px\] {
+    font-size: 8px;
+  }
+  .text-\[12px\] {
+    font-size: 12px;
   }
   .text-\[14px\] {
     font-size: 14px;
@@ -654,6 +805,10 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .font-extrabold {
+    --tw-font-weight: var(--font-weight-extrabold);
+    font-weight: var(--font-weight-extrabold);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
@@ -665,8 +820,14 @@
   .text-\[\#005500\] {
     color: #005500;
   }
+  .text-\[\#a8bec9\] {
+    color: #a8bec9;
+  }
   .text-\[\#cdf066\] {
     color: #cdf066;
+  }
+  .text-\[px\] {
+    color: px;
   }
   .text-black {
     color: var(--color-black);
@@ -698,6 +859,10 @@
   .opacity-60 {
     opacity: 60%;
   }
+  .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-\[-20px_-20px_50px_rgba\(250\,250\,250\,0\.4\)\] {
     --tw-shadow: -20px -20px 50px var(--tw-shadow-color, rgba(250,250,250,0.4));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -705,6 +870,80 @@
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-md {
+    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .inset-shadow-2xs {
+    --tw-inset-shadow: inset 0 1px var(--tw-inset-shadow-color, rgb(0 0 0 / 0.05));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .\[box-shadow\:0_4px_6px_-1px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_6px_-2px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_6px_1px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 6px 1px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_6px_2px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 6px 2px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_6px_10px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 6px 10px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_10px_-1px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 10px -1px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_4px_100px_-1px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 4px 100px -1px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_6px_10px_0_rgba\(0\,0\,0\,0\.3\)\] {
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.3);
+  }
+  .\[box-shadow\:0_10px_0px_0_rgba\(0\,0\,0\,0\.3\)\] {
+    box-shadow: 0 10px 0px 0 rgba(0,0,0,0.3);
+  }
+  .\[box-shadow\:0_10px_2px_0_rgba\(0\,0\,0\,0\.3\)\] {
+    box-shadow: 0 10px 2px 0 rgba(0,0,0,0.3);
+  }
+  .\[box-shadow\:0_10px_6px_-1px_rgba\(0\,0\,0\,0\.1\)\] {
+    box-shadow: 0 10px 6px -1px rgba(0,0,0,0.1);
+  }
+  .\[box-shadow\:0_10px_10px_0_rgba\(0\,0\,0\,0\.3\)\] {
+    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.3);
+  }
+  .shadow-\[\#102129\] {
+    --tw-shadow-color: #102129;
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, #102129 var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-black {
+    --tw-shadow-color: #000;
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-black) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-blue-600 {
+    --tw-shadow-color: oklch(54.6% 0.245 262.881);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-blue-600) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .shadow-gray-700 {
+    --tw-shadow-color: oklch(37.3% 0.034 259.733);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-gray-700) var(--tw-shadow-alpha), transparent);
+    }
+  }
+  .inset-shadow-indigo-500 {
+    --tw-inset-shadow-color: oklch(58.5% 0.233 277.117);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-inset-shadow-color: color-mix(in oklab, var(--color-indigo-500) var(--tw-inset-shadow-alpha), transparent);
+    }
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -750,6 +989,36 @@
       width: 40%;
     }
   }
+  .md\:w-\[400px\] {
+    @media (width >= 48rem) {
+      width: 400px;
+    }
+  }
+  .md\:w-\[450px\] {
+    @media (width >= 48rem) {
+      width: 450px;
+    }
+  }
+  .md\:w-\[500px\] {
+    @media (width >= 48rem) {
+      width: 500px;
+    }
+  }
+  .md\:w-\[550px\] {
+    @media (width >= 48rem) {
+      width: 550px;
+    }
+  }
+  .md\:w-\[600px\] {
+    @media (width >= 48rem) {
+      width: 600px;
+    }
+  }
+  .md\:w-\[800px\] {
+    @media (width >= 48rem) {
+      width: 800px;
+    }
+  }
   .md\:max-w-\[350px\] {
     @media (width >= 48rem) {
       max-width: 350px;
@@ -769,6 +1038,31 @@
     @media (width >= 48rem) {
       border-top-right-radius: var(--radius-xl);
       border-bottom-right-radius: var(--radius-xl);
+    }
+  }
+  .md\:px-\[3px\] {
+    @media (width >= 48rem) {
+      padding-inline: 3px;
+    }
+  }
+  .md\:px-\[200px\] {
+    @media (width >= 48rem) {
+      padding-inline: 200px;
+    }
+  }
+  .md\:px-\[300px\] {
+    @media (width >= 48rem) {
+      padding-inline: 300px;
+    }
+  }
+  .md\:px-\[350px\] {
+    @media (width >= 48rem) {
+      padding-inline: 350px;
+    }
+  }
+  .md\:px-\[400px\] {
+    @media (width >= 48rem) {
+      padding-inline: 400px;
     }
   }
   .md\:text-gray-600 {
@@ -827,6 +1121,31 @@
       color: var(--color-white);
     }
   }
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateX(0);
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateY(0);
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: rotateZ(0);
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewX(0);
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: skewY(0);
 }
 @property --tw-border-style {
   syntax: "*";
@@ -1013,6 +1332,11 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-rotate-x: rotateX(0);
+      --tw-rotate-y: rotateY(0);
+      --tw-rotate-z: rotateZ(0);
+      --tw-skew-x: skewX(0);
+      --tw-skew-y: skewY(0);
       --tw-border-style: solid;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
